--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -18,9 +18,9 @@
             android:id="@+id/tvCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:textAppearance="@style/TextAppearance.Category"
-            app:layout_constraintEnd_toStartOf="@+id/ivImage"
+            app:layout_constraintEnd_toEndOf="@+id/barrier2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -32,12 +32,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:lines="2"
             android:textAppearance="@style/TextAppearance.Title"
-            app:layout_constraintEnd_toStartOf="@+id/ivImage"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/tvCategory"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toEndOf="@+id/barrier2"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvCategory"
             tools:text="Create your NewsItem XML layout"
             />
@@ -59,12 +60,15 @@
 
         <ImageView
             android:id="@+id/ivImage"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleType="centerCrop"
+            android:layout_marginStart="8dp"
             android:contentDescription="@string/content_description_image_for_news"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="@+id/tvBody"
+            app:layout_constraintDimensionRatio="h,1:1"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/barrier2"
             app:layout_constraintTop_toTopOf="@+id/tvTitle"
             tools:src="@tools:sample/avatars"
             />
@@ -74,13 +78,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:textAppearance="@style/TextAppearance.Date"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/barrier2"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/tvCategory"
             app:layout_constraintTop_toBottomOf="@+id/tvBody"
             tools:text="Вчера"
             />
 
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrier2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="278dp"
+            app:barrierDirection="left"
+            app:constraint_referenced_ids="ivImage"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
